Updated UI/UX design and added project functionality in home section also

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
 
   <!-- Navbar -->
   <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;">
-  <h1 class="accent">ProMan</h1>
+  <h1 class="accent">Planhubb</h1>
   <div style="display:flex; gap:1rem; align-items:center;">
     <a href="#hero">Home</a>
     <a href="#about">About</a>
@@ -137,17 +137,34 @@
 </nav>
 
 
-  <!-- Hero Section -->
-  <section id="hero" class="hero">
-    <h1>Manage Projects Smarter with ProMan</h1>
-    <p>Track tasks, collaborate with your team, and stay organized. ProMan makes project management simple, efficient, and visually appealing.</p>
-    <button class="btn btn-primary">Get Started</button>
-  </section>
+ <!-- Hero Section -->
+<section id="hero" class="hero" style="padding: 40px;">
+  <div style="display: flex; align-items: center; justify-content: space-between; gap: 40px; max-width: 1200px; margin: auto;">
+    
+    <!-- Hero Text -->
+    <div style="flex: 1;">
+      <h1>Manage Projects Smarter with Planhubb</h1>
+      <p>Track tasks, collaborate with your team, and stay organized. Planhubb makes project management simple, efficient, and visually appealing.</p>
+      <button class="btn btn-primary"><a href="auth/login.html">Get Started</a> </button>
+    </div>
 
+    <!-- Hero Image -->
+    <div style="flex: 1; text-align: center;">
+      <img src="./img/scrun board.png" alt="Hero Image" style="max-width: 100%; height: auto; border-radius: 10px;">
+    </div>
+
+  </div>
+</section>
+
+<!-- Image Showcase -->
+<div style="text-align: center; margin: 40px 0;">
+  
+
+</div>
   <!-- About Us -->
   <section id="about">
     <h2>About Us</h2>
-    <p>ProMan is designed for teams who want a clean, intuitive, and dark-mode friendly project management tool. Stay on top of tasks and boost productivity.</p>
+    <p>Planhubb is designed for teams who want a clean, intuitive, and dark-mode friendly project management tool. Stay on top of tasks and boost productivity.</p>
     <div class="grid">
       <div class="card">
         <h3>Vision</h3>
@@ -190,7 +207,7 @@
   <!-- Subscribe -->
   <section id="subscribe">
     <h2>Subscribe for Updates</h2>
-    <p>Get notified when new features are released and stay ahead with ProMan.</p>
+    <p>Get notified when new features are released and stay ahead with Planhubb.</p>
     <form class="subscribe">
       <input type="email" placeholder="Enter your email" required>
       <button class="btn btn-primary" type="submit">Subscribe</button>
