--- a/public/projects.html
+++ b/public/projects.html
@@ -54,9 +54,8 @@
 <body>
 
 <aside class="sidebar">
-  <h1>ProMan</h1>
-  <a href="home.html">Dashboard</a>
-  <a href="projects.html">Projects</a>
+  <h1 style="cursor: pointer;" onclick="window.location.href='home.html'">Planhubb</h1>
+  <a href="projects.html">My Projects</a>
   <a href="teams.html">Teams</a>
   <a href="calendar.html">Calendar</a>
   <a href="settings.html">Settings</a>
