--- a/public/settings.html
+++ b/public/settings.html
@@ -109,7 +109,7 @@
 <body>
   <!-- Sidebar -->
   <aside class="sidebar">
-    <h2>ProMan</h2>
+    <h2>Planhubb</h2>
     <a href="home.html">Back <-</a>
     <button id="logout-btn" class="btn btn-outline">Logout</button>
   </aside>
@@ -117,15 +117,6 @@
   <!-- Main Content -->
   <main class="main">
     <h1>Settings</h1>
-
-    <div class="settings-section">
-      <h3>Profile</h3>
-      <label for="username">Username</label>
-      <input type="text" id="username" placeholder="Your name" readonly>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Your email" readonly>
-    </div>
 
     <div class="settings-section">
       <h3>Preferences</h3>
