--- a/public/kanban.html
+++ b/public/kanban.html
@@ -46,7 +46,7 @@ body, html { margin:0; font-family: system-ui, sans-serif; height: 100%; display
 <body>
 
 <aside class="sidebar">
-  <h1>ProMan</h1>
+  <h1>Planhubb</h1>
   <a href="projects.html">Back to Projects</a>
 </aside>
 
