--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planhubb - Project Management Made Easy</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libertinus+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Hero Section */
     .hero {
@@ -14,22 +21,57 @@
       align-items: center;
       text-align: center;
       padding: 6rem 2rem;
-      background: var(--surface);
       border-radius: var(--r);
       margin: 2rem;
       box-shadow: var(--shadow);
     }
+
+    /* Image Showcase */
+    .image-showcase {
+      text-align: center;
+      margin: 40px 0;
+    }
+
     .hero h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
       color: var(--accent);
+      font-family: "Libertinus Sans", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      text-align: left;
     }
+
     .hero p {
       font-size: 1.2rem;
-      color: var(--text);
+      color: #63c7d4;
       max-width: 600px;
       margin-bottom: 2rem;
+      font-family: sans-serif;
+      font-weight: 400; 
+      font-style: normal;
+      text-align: left;
     }
+    .hero button {
+      padding: 0.8rem 1.5rem;
+      font-size: 1rem;
+      background-color: transparent;
+      outline: oklab(lightness a b);
+      color: #0a0f0f;
+      border: 1px solid color-mix(in oklab, var(--muted) 50%, transparent);
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+    .hero button:hover {
+      background-color: var(--accent-contrast);
+      color: #0a0f0f;
+      box-shadow: inset 0 0 0 2px var(--accent-contrast);
+    }
+    .hero button a {
+      text-decoration: none;
+    }
+
     .hero .btn-primary {
       padding: 0.8rem 1.5rem;
       font-size: 1rem;
@@ -39,12 +81,14 @@
     section {
       padding: 4rem 2rem;
     }
+
     section h2 {
       text-align: center;
       font-size: 2rem;
       margin-bottom: 2rem;
       color: var(--accent);
     }
+
     section p {
       max-width: 700px;
       margin: 0 auto 1.5rem;
@@ -58,20 +102,23 @@
       gap: 2rem;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
+
     .card {
-      background: var(--elev);
       padding: 1.5rem;
       border-radius: var(--r);
       box-shadow: var(--shadow);
       transition: transform 0.2s ease;
     }
+
     .card:hover {
       transform: translateY(-5px);
     }
+
     .card h3 {
       margin-bottom: 1rem;
       color: var(--accent);
     }
+
     .card p {
       color: var(--text);
     }
@@ -85,6 +132,7 @@
       max-width: 400px;
       margin: 0 auto;
     }
+
     .subscribe input {
       width: 100%;
       padding: 0.65rem;
@@ -94,6 +142,7 @@
       color: var(--text);
       outline: none;
     }
+
     .subscribe button {
       width: 100%;
       cursor: pointer;
@@ -107,6 +156,7 @@
       color: var(--muted);
       margin-top: 4rem;
     }
+
     footer a {
       color: var(--accent);
       margin: 0 0.5rem;
@@ -120,51 +170,54 @@
   document.documentElement.setAttribute("data-theme", savedTheme);
 </script>
 
-<body>
+<body class="graditent-background">
 
   <!-- Navbar -->
-  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;">
-  <h1 class="accent">Planhubb</h1>
-  <div style="display:flex; gap:1rem; align-items:center;">
-    <a href="#hero">Home</a>
-    <a href="#about">About</a>
-    <a href="#features">Features</a>
-    <a href="#subscribe">Subscribe</a>
-    <!-- Login / Signup buttons -->
-    <a href="auth/login.html" class="btn btn-outline">Login</a>
-    <a href="auth/signup.html" class="btn btn-primary">Sign Up</a>
-  </div>
-</nav>
-
-
- <!-- Hero Section -->
-<section id="hero" class="hero" style="padding: 40px;">
-  <div style="display: flex; align-items: center; justify-content: space-between; gap: 40px; max-width: 1200px; margin: auto;">
-    
-    <!-- Hero Text -->
-    <div style="flex: 1;">
-      <h1>Manage Projects Smarter with Planhubb</h1>
-      <p>Track tasks, collaborate with your team, and stay organized. Planhubb makes project management simple, efficient, and visually appealing.</p>
-      <button class="btn btn-primary"><a href="auth/login.html">Get Started</a> </button>
+  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:0rem 2rem;">
+    <h1 class="accent"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></h1>
+    <div style="display:flex; gap:1rem; align-items:center;">
+      <a href="#hero" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#features">Features</a>
+      <a href="#subscribe">Subscribe</a>
+      <!-- Login / Signup buttons -->
+      <a href="auth/login.html" class="btn btn-outline">Login</a>
+      <a href="auth/signup.html" class="btn btn-primary">Sign Up</a>
     </div>
+  </nav>
 
-    <!-- Hero Image -->
-    <div style="flex: 1; text-align: center;">
-      <img src="./img/scrun board.png" alt="Hero Image" style="max-width: 100%; height: auto; border-radius: 10px;">
-    </div>
+
+  <!-- Hero Section -->
+  <section id="hero" class="hero" style="padding: 40px;">
+    <div style="display: flex; align-items: center; justify-content: space-between; gap: 40px; max-width: 100%; margin: auto;">
+
+      <!-- Hero Text -->
+      <div style="flex: 1; padding-left: 150px;">
+        <h1>Manage Projects Smarter with Planhubb</h1>
+        <p>Track tasks, collaborate with your team, and stay organized. Planhubb makes project management simple,
+          efficient, and visually appealing.</p>
+        <button class="btn"><a href="">Get Started</a> </button>
+      </div>
+
+      <!-- Hero Image -->
+      <div style="flex: 1;">
+        <img src="img/logo/logo.gif" alt="Project Management" style="max-width: 100%; height: auto;">
+      </div>
+      <div class="image-showcase">
+
+      </div>
+  </section>
+
+  <!-- Image Showcase -->
+  <div style="text-align: center; margin: 40px 0;">
+
 
   </div>
-</section>
-
-<!-- Image Showcase -->
-<div style="text-align: center; margin: 40px 0;">
-  
-
-</div>
   <!-- About Us -->
   <section id="about">
     <h2>About Us</h2>
-    <p>Planhubb is designed for teams who want a clean, intuitive, and dark-mode friendly project management tool. Stay on top of tasks and boost productivity.</p>
+    <p>Planhubb is designed for teams who want a clean, intuitive, and dark-mode friendly project management tool. Stay
+      on top of tasks and boost productivity.</p>
     <div class="grid">
       <div class="card">
         <h3>Vision</h3>
@@ -223,4 +276,5 @@
   </footer>
 
 </body>
+
 </html>
