updated the ui of home.html

--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
         <h1>Manage Projects Smarter with Planhubb</h1>
         <p>Track tasks, collaborate with your team, and stay organized. Planhubb makes project management simple,
           efficient, and visually appealing.</p>
-        <button class="btn"><a href="">Get Started</a> </button>
+        <button class="btn"><a href="auth/login.html">Get Started</a> </button>
       </div>
 
       <!-- Hero Image -->
