--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planhubb - Dashboard</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libertinus+Sans:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Hero/Dashboard Section */
     .dashboard-hero {
@@ -12,22 +15,31 @@
       justify-content: space-between;
       align-items: center;
       padding: 3rem 2rem;
-      background: var(--surface);
-      border-radius: var(--r);
       box-shadow: var(--shadow);
       margin: 2rem;
     }
     .dashboard-hero h1 {
-      font-size: 2.5rem;
+      font-size: 4.5rem;
       color: var(--accent);
+      font-family: "Libertinus Sans", sans-serif;
+      text-align: center;
+      text-shadow: #00f1f1 3px 5px 10px;
     }
     .dashboard-hero p {
       font-size: 1.2rem;
-      color: var(--text);
+      color: #63c7d4;
       max-width: 600px;
+      margin-top: 1rem;
+      font-weight: 400;
+      font-style: normal;
+      text-align: center;
+      line-height: 1.5;
+      font-family: "Dancing Script", cursive;
+      font-optical-sizing: auto;
+      font-weight: 1000;
+      font-style:normal;
     }
-
-    /* Cards for projects */
+        /* Cards for projects */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -59,13 +71,18 @@
       font-size: 1rem;
       cursor: pointer;
     }
+    #logout-btn:hover {
+      background-color: var(--accent-contrast);
+      color: #0a0f0f;
+      outline: none;
+    }
   </style>
 </head>
 <body style="visibility:hidden">
 
   <!-- Navbar After Login -->
   <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;">
-    <h1 class="accent"><a href="home.html">Planhubb</a></h1>
+    <h1 class="accent"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></h1>
     <div style="display:flex; gap:1rem; align-items:center;">
       <a href="projects.html">Projects</a>
       <a href="#">Teams</a>
@@ -75,14 +92,22 @@
   </nav>
 
   <!-- Dashboard Hero -->
-  <section class="dashboard-hero">
-    <div>
-      <h1>Welcome Back!!!</h1>
-      <p>Check your ongoing projects, collaborate with your team, and stay on top of deadlines.</p>
-    </div>
-    <div style="text-align: center;">
-      <img src="img/undraw_project-team_dip6.png" alt="Dashboard Hero" style="max-width: 400px; border-radius: 10px;">
-    </div>
+   
+  <section class="dashboard-hero" style="padding: 0px 40px;">
+    <div style="display: flex; align-items: center; justify-content: space-between; gap: 40px; max-width: 100%; margin: auto;">
+      <!-- Hero Text -->
+      <div style="flex: 1; padding-left: 150px;">
+        <h1>Welcome Back !</h1>
+        <p>Check your ongoing projects, collaborate with your team, and stay on top of deadlines.</p>
+      </div>
+
+      <!-- Hero Image -->
+      <div style="flex: 1;">
+        <img src="img/logo/logo.gif" alt="Project Management" style="max-width: 100%; height: auto;">
+      </div>
+      <div class="image-showcase">
+
+      </div>
   </section>
 
   <!-- Your Projects Section -->
