changes made to home.html

--- a/public/home.html
+++ b/public/home.html
@@ -64,7 +64,7 @@
 <body style="visibility:hidden">
 
   <!-- Navbar After Login -->
-  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;">
+  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; ">
     <h1 class="accent"><a href="home.html">Planhubb</a></h1>
     <div style="display:flex; gap:1rem; align-items:center;">
       <a href="projects.html">Projects</a>
