--- a/public/home.html
+++ b/public/home.html
@@ -6,8 +6,8 @@
   <title>Planhubb - Dashboard</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libertinus+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <style>
     /* Hero/Dashboard Section */
     .dashboard-hero {
@@ -21,12 +21,13 @@
     .dashboard-hero h1 {
       font-size: 4.5rem;
       color: var(--accent);
-      font-family: "Libertinus Sans", sans-serif;
+      font-family: "Dancing Script", cursive;
+      font-optical-sizing: auto;
+      font-style:normal;
       text-align: center;
-      text-shadow: #00f1f1 3px 5px 10px;
     }
     .dashboard-hero p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       color: #63c7d4;
       max-width: 600px;
       margin-top: 1rem;
@@ -34,10 +35,9 @@
       font-style: normal;
       text-align: center;
       line-height: 1.5;
-      font-family: "Dancing Script", cursive;
-      font-optical-sizing: auto;
-      font-weight: 1000;
-      font-style:normal;
+      font-family: "Libertinus Sans", sans-serif;
+      font-weight: 400;
+      font-style: normal;
     }
         /* Cards for projects */
     .grid {
@@ -47,24 +47,13 @@
       padding: 2rem;
     }
     .card {
-      background: var(--elev);
-      padding: 1.5rem;
-      border-radius: var(--r);
-      box-shadow: var(--shadow);
+      padding: 2rem;
       transition: transform 0.2s ease;
       cursor: pointer;
       text-align: center;
     }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card h3 {
-      margin-bottom: 1rem;
-      color: var(--accent);
-    }
-    .card p {
-      color: var(--text);
-    }
+   
+    
     .card button {
       margin-top: 1rem;
       padding: 0.5rem 1rem;
@@ -81,7 +70,7 @@
 <body style="visibility:hidden">
 
   <!-- Navbar After Login -->
-  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;">
+  <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:0rem 2rem;">
     <h1 class="accent"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></h1>
     <div style="display:flex; gap:1rem; align-items:center;">
       <a href="projects.html">Projects</a>
@@ -110,10 +99,12 @@
       </div>
   </section>
 
+  <!-- main section  -->
+   <section id="main-container">
   <!-- Your Projects Section -->
   <section id="projects">
     <h2 style="text-align:center; margin-top:2rem;">Your Projects</h2>
-    <div id="projects-grid" class="grid">
+    <div id="projects-grid" class="grid block">
       <!-- Project cards injected here dynamically -->
     </div>
   </section>
@@ -122,21 +113,22 @@
   <section id="teams">
     <h2 style="text-align:center; margin-top:2rem;">Our Teams</h2>
     <div class="grid">
-      <div class="card">
+      <div class="card block">
         <h3>Frontend Team</h3>
         <p>Handles UI, design, and user experience.</p>
       </div>
-      <div class="card">
+      <div class="card block">
         <h3>Backend Team</h3>
         <p>Manages servers, databases, and APIs.</p>
       </div>
-      <div class="card">
+      <div class="card block">
         <h3>QA Team</h3>
         <p>Tests features, ensures quality, and reports bugs.</p>
       </div>
     </div>
   </section>
-
+  </section>
+  <!-- main section ends here-->
   <!-- Footer -->
   <footer>
     <p>© 2025 Planhubb. All rights reserved.</p>
