testing for merge

--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,8 @@
 
 <!-- main container ends here -->
   <!-- Footer -->
-
+<!-- main container ends here -->
+  <!-- Footer -->
   <footer>
     <p>© 2025 Planhubb. All rights reserved.</p>
     <p>
