--- a/public/home.html
+++ b/public/home.html
@@ -133,7 +133,7 @@
   <footer>
     <p>© 2025 Planhubb. All rights reserved.</p>
     <p>
-      <a href="#">Privacy</a> | <a href="#">Terms</a> | <a href="#">Contact</a>
+      <a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="contact.html">Contact</a>
     </p>
   </footer>
 
