--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 
   <!-- Navbar -->
   <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:0rem 2rem;">
-    <h1 class="accent"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></h1>
+    <h1 class="accent"><a href="./index.html"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></a></h1>
     <div style="display:flex; gap:1rem; align-items:center;">
       <a href="#hero" class="active">Home</a>
       <a href="#about">About</a>
@@ -214,7 +214,7 @@
         <h1>Manage Projects Smarter with Planhubb</h1>
         <p>Track tasks, collaborate with your team, and stay organized. Planhubb makes project management simple,
           efficient, and visually appealing.</p>
-        <button class="btn"><a href="">Get Started</a> </button>
+        <button class="btn"><a href="./signup.html">Get Started</a> </button>
       </div>
 
       <!-- Hero Image -->
