--- a/public/home.html
+++ b/public/home.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <script src=./js/notification/notification.js></script>
   <style>
     /* Hero/Dashboard Section */
     .dashboard-hero {
@@ -65,6 +66,50 @@
       color: #0a0f0f;
       outline: none;
     }
+
+    .notif-btn {
+  position: relative;
+  cursor: pointer;
+  font-size: 1.2rem;
+  background: none;
+  border: none;
+}
+.notif-count {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 0.7rem;
+}
+.notif-dropdown {
+  display: none;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 250px;
+  max-height: 400px;
+  overflow-y: auto;
+  background: var(--surface);
+  border: 1px solid var(--muted);
+  border-radius: var(--r);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  z-index: 100;
+}
+.notif-dropdown.active {
+  display: block;
+}
+.notif-item {
+  padding: 0.5rem;
+  border-bottom: 1px solid var(--muted);
+  cursor: pointer;
+}
+.notif-item:hover {
+  background: var(--elev);
+}
+
   </style>
 </head>
 <body style="visibility:hidden">
@@ -73,6 +118,14 @@
   <nav class="nav" style="display:flex; justify-content:space-between; align-items:center; padding:0rem 2rem;">
     <h1 class="accent"><img src="img/logo/logo-icon-home-icon.png" alt="logo" width="70px"></h1>
     <div style="display:flex; gap:1rem; align-items:center;">
+      <div class="notification-wrapper">
+    <button id="notifBtn" class="notif-btn">
+      🔔 <span id="notifCount" class="notif-count">0</span>
+    </button>
+    <div id="notifDropdown" class="notif-dropdown">
+      <!-- Notifications will be injected here -->
+    </div>
+  </div>
       <a href="projects.html">Projects</a>
       <a href="#">Teams</a>
       <a href="settings.html">Settings</a>
