--- a/public/projects.html
+++ b/public/projects.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planhubb - Projects</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="script.js"></script>
   <style>
     body,
     html {
@@ -238,7 +239,7 @@
       <div class="modal-content">
         <span id="closeModal" class="close">&times;</span>
         <h2>Create / Edit Project</h2>
-        <form id="createProjectForm">
+        <form id="createProjectForm" onsubmit="sendProjectAssignedMail(event)">
           <div class="form-group">
             <label for="projectName">Project Name</label>
             <input type="text" id="projectName" class="form-control" placeholder="Project Name" required>
@@ -264,7 +265,7 @@
             <label for="projectTeam">Team Members (comma separated emails/UIDs)</label>
             <input type="text" id="projectTeam" class="form-control" placeholder="user1@example.com, user2@example.com">
           </div>
-          <button type="submit" class="btn btn-primary mt-2">Save Project</button>
+          <button type="submit" class="btn btn-primary mt-2" onclick=sendProjectAssignedMail()>Save Project</button>
         </form>
       </div>
     </div>
@@ -405,6 +406,17 @@
     });
 
   </script>
+  <!-- EmailJS -->
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "TU_jBfFsk5CG4vGBd",
+      });
+   })();
+</script>
 </body>
 
 </html>
