bug fixing for teams.html

--- a/public/home.html
+++ b/public/home.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <a href="projects.html">Projects</a>
-      <a href="#">Teams</a>
+      <a href="./planhubbTeams/teams.html">Teams</a>
       <a href="settings.html">Settings</a>
       <button id="logout-btn" class="btn btn-outline">Logout</button>
     </div>
