--- a/public/projects.html
+++ b/public/projects.html
@@ -223,7 +223,7 @@
   <aside class="sidebar">
     <h1 style="cursor: pointer;" onclick="window.location.href='home.html'"><img src="img/logo/logo-icon-home-icon.png" alt="Planhubb" width="70px"></h1>
     <a href="projects.html">My Projects</a>
-    <a href="teams.html">Teams</a>
+    <a href="./planhubbTeams/teams.html">Teams</a>
     <a href="calendar.html">Calendar</a>
     <a href="settings.html">Settings</a>
   </aside>
