--- a/public/projects.html
+++ b/public/projects.html
@@ -81,7 +81,7 @@
     }
     .project-card {
       background: var(--surface);
-      padding: 1rem;
+      padding: 2rem;
       border-radius: var(--r);
       box-shadow: var(--shadow);
       display: flex;
@@ -98,7 +98,7 @@
 
     .project-card h3 {
       color: var(--accent);
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }
 
     .project-card p {
@@ -110,10 +110,10 @@
     }
 
     .project-status {
-      padding: 0.25rem 0.5rem;
+      padding: 0.25rem 1rem;
       border-radius: 999px;
       font-size: 0.75rem;
-      margin-top: 0.5rem;
+      margin: 1rem 0;
       display: inline-block;
     }
 
