--- a/public/team/aaditya.html
+++ b/public/team/aaditya.html
@@ -103,7 +103,7 @@
   </nav>
 
   <div class="profile card">
-    <img src="../img/Aditya.jpg" alt="Aaditya Thapaliya">
+    <img src="../img/teams/Aditya.jpg" alt="Aaditya Thapaliya">
     <h2>Aaditya Thapaliya</h2>
     <p class="role">Resource Manager</p>
     <p class="bio">
