--- a/public/team/bikram.html
+++ b/public/team/bikram.html
@@ -103,7 +103,7 @@
   </nav>
 
   <div class="profile card">
-    <img src="../img/bikram - Copy.jpg" alt="Bikram Tamang">
+    <img src="../img/teams/bikram - Copy.jpg" alt="Bikram Tamang">
     <h2>Bikram Tamang</h2>
     <p class="role">Team Lead</p>
     <p class="bio">
