--- a/public/team/neha.html
+++ b/public/team/neha.html
@@ -103,7 +103,7 @@
   </nav>
 
   <div class="profile card">
-    <img src="../img/Neha.jpg" alt="Neha K.C (Khatri)">
+    <img src="../img/teams/Neha.jpg" alt="Neha K.C (Khatri)">
     <h2>Neha K.C (Khatri)</h2>
     <p class="role">UI/UX Designer</p>
     <p class="bio">
