--- a/public/team/sandeep.html
+++ b/public/team/sandeep.html
@@ -103,7 +103,7 @@
   </nav>
 
   <div class="profile card">
-    <img src="../img/Sandeep.jpg" alt="Sandeep Meche">
+    <img src="../img/teams/Sandeep.jpg" alt="Sandeep Meche">
     <h2>Sandeep Meche</h2>
     <p class="role">Front-End Developer</p>
     <p class="bio">
@@ -117,12 +117,12 @@
       <span class="badge">JavaScript</span>
       <span class="badge">React</span>
       <span class="badge">Next.js</span>
-      <span class="badge">Tailwind CSS</span>
-      <span class="badge">Figma</span>
+      <span class="badge">Creative Designer</span>
+      <span class="badge">Robotic & IoT</span>
     </div>
 
     <div class="social-links">
-      <a href="https://www.linkedin.com/in/sandeep" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/sandipmeche" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/gituser-sandip" target="_blank"><i class="fab fa-github"></i></a>
       <a href="https://www.instagram.com/asandip01/?__pwa=1#" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
